# arcade-game

./: .gitignore  CMakeLists.txt  README.md  arcade-game.sln  arcade-game.vcxproj  arcade-game.vcxproj.filters  gitingore
include/: ObjectWithMovement.h  animation.h  enemy.h  flyingenemy.h  gameobject.h  gamestate.h  goblin.h  healthbar.h  level.h  main_menu.h  my_stdio.h  orge.h  platform.h  player.h  projectile.h  skeleton.h
source/: ObjectWithMovement.cpp  animate.cpp  enemy.cpp  flyingenemy.cpp  gameobject.cpp  gamestate.cpp  goblin.cpp  healthbar.cpp  level.cpp  main.cpp  main_menu.cpp  orge.cpp  platform.cpp  player.cpp  projectile.cpp  skeleton.cpp
